<resources>
    <string name="app_name">Hair Color App</string>
    <string name="action_training">Training</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_device">DeviceActivity</string>
    <string name="title_activity_forgot">ForgotActivity</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="navigation_open">Open</string>
    <string name="navigation_close">Close</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="password">password</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="password_reset">Password Reset</string>
    <string name="send_instruction">Send Instruction</string>
    <string name="create_new">Create New Account</string>
    <string name="account_email">email</string>

    <string name="register_lower">register_lower</string>
    <string name="password_with_note">password_with_note</string>
    <string name="confirm_password">confirm password</string>
    <string name="language">language</string>
    <string name="english">english</string>
    <string name="agree_eula">EULA</string>
    <string name="age_info">Age</string>
    <string name="confirm_email">confirm_email</string>
    <string name="confirmation">confirmation</string>
    <string name="confirmation_note">confirmation_note</string>
    <string name="next_step">next_step</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email">email</string>

    <string name="logo_exp"> Hair Color</string>
    <string name="hair_color">HairColor</string>
    <string name="that">Get your genuine hair color</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_boarding">Hair Color 3</string>

    <string name="action_help">Help</string>
    <string name="action_about">About</string>


    <string-array name="companies">
        <item>Aveda</item>
        <item>LOreal</item>
        <item>Schwartzkoph</item>
        <item>RedKen</item>
        <item>Goldwell</item>
        <item>Wells</item>
    </string-array>

    <string-array name="catalog">
        <item></item>
    </string-array>

    <string-array name="series">
        <item></item>
    </string-array>

    <string-array name="color">
        <item>1 N</item>
        <item>2 N</item>
        <item>3 N</item>
        <item>4 N</item>
        <item>5 N</item>
        <item>6 N</item>
        <item>7 N</item>
        <item>8 N</item>
        <item>9 N</item>
        <item>10 N</item>
    </string-array>

    <string name="title_activity_trainig">Training </string>
    <string name="title_activity_settings">Settings </string>
    <string name="title_activity_about">About </string>
    <string name="title_activity_speech_to_text">SpeechToTextActivity</string>
    <string name="ic_mic">Mic</string>

    <string name="speech_prompt">Say something&#8230;</string>
    <string name="speech_not_supported">Sorry! Your device doesn\'t support speech input</string>
    <string name="tap_on_mic">Tap on mic to speak</string>

    <string name="training">Training</string>
    <string name="company">Company</string>
    <string name="category">Category</string>
    <string name="series">Series</string>
    <string name="color">Color</string>
    <string name="perc">%</string>

    <string name="detail">Detail</string>
    <string name="contentDescription">No decription</string>

    <string name="my_account">My Account</string>
    <string name="sign_out">Sign Out</string>

    <string name="uname">a@a.com</string>
    <string name="upass">1</string>

    <string name="customer">Customer</string>
    <string name="stylist">Stylist</string>
    <string name="widget">Widget</string>
    <string name="searcable">Search customer by name</string>

</resources>
