<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context="com.syshuman.kadir.haircolor3.view.fragments.LoginFragment">

    <LinearLayout
        android:id="@+id/forgot_password_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:visibility="gone">

        <ImageView
            android:id="@+id/back_arrow"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:contentDescription="@string/contentDescription"
            android:clickable="true"
            android:src="@mipmap/ic_back" />

        <TextView
            android:id="@+id/forgot_password_title1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:gravity="center_horizontal"
            android:text="@string/forgot_password"
            android:textSize="@dimen/font_top_bar_size" />

        <TextView
            android:id="@+id/forgot_password_title2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:gravity="center_horizontal"
            android:text="@string/password_reset"
            android:textColor="@color/colorBlack"
            android:textSize="@dimen/font_title_size" />


        <android.support.design.widget.TextInputLayout
            android:id="@+id/email_input_wrap2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp">

            <EditText
                android:id="@+id/account_email_input2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/transparent"
                android:drawablePadding="5dp"
                android:hint="@string/account_email"
                android:imeOptions="actionNext"
                android:inputType="textEmailAddress|textAutoCorrect"
                android:maxLength="50"
                android:textColor="@color/colorBlack" />

        </android.support.design.widget.TextInputLayout>

        <View
            android:id="@+id/dividen_line4"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="10dp"
            android:background="@color/colorBlack" />

        <Button
            android:id="@+id/send_email"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="20dp"
            android:text="@string/send_instruction" />


    </LinearLayout>

    <LinearLayout
        android:id="@+id/main_login_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_vertical"
        android:orientation="vertical"
        android:padding="@dimen/paddingMedium"
        android:visibility="visible">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/email_input_wrap"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:padding="@dimen/paddingLarge">

            <EditText
                android:id="@+id/account_email_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/account_email"
                android:imeOptions="actionNext"
                android:inputType="textEmailAddress|textAutoCorrect"
                android:text="@string/uname"
                android:textSize="@dimen/fontMedium" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/password_input_wrap"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/paddingLarge">

            <EditText
                android:id="@+id/password_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:hint="@string/password"
                android:imeOptions="actionDone"
                android:inputType="textPassword"
                android:text="@string/upass"
                android:textSize="@dimen/fontMedium" />

        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/login_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/marginLarge"
            android:background="?android:attr/fastScrollTrackDrawable"
            android:text="@string/login"
            android:textSize="@dimen/fontLarge" />


        <Button
            android:id="@+id/register_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/marginLarge"
            android:background="@drawable/shape_black_stroke_rectangle"
            android:text="@string/register"
            android:textSize="@dimen/fontLarge" />

        <Button
            android:id="@+id/forgot_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/marginLarge"
            android:background="@drawable/shape_black_stroke_rectangle"
            android:text="@string/forgot_password"
            android:textSize="@dimen/fontLarge" />

    </LinearLayout>


</FrameLayout>
